objects/Demo_Cleanup_Task__c.object
<CustomObject>
    <description>A specification for the deletion of an object&apos;s records as part of a demo cleanup.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Checked if this item should be included in the list of tasks.</description>
        <inlineHelpText>Checked if this item should be included in the list of tasks.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apex_Class_Name__c</fullName>
        <description>The name of the Apex class to execute. The class must implement the DemoCleanupApexItem interface.</description>
        <inlineHelpText>The name of the Apex class to execute. The class must implement the DemoCleanupApexItem interface.</inlineHelpText>
        <label>Apex Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>A description of the demo cleanup item, for example, &quot;Delete all records that are not custom-crafted for the demo scenario&quot;.</description>
        <inlineHelpText>A description of the demo cleanup item, for example, &quot;Delete all records that are not custom-crafted for the demo scenario&quot;.</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flow_API_Name__c</fullName>
        <description>API name of the autolaunched flow to execute.</description>
        <inlineHelpText>API name of the autolaunched flow to execute.</inlineHelpText>
        <label>Flow API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_API_Name__c</fullName>
        <description>API Name of the object whose records are to be deleted.</description>
        <inlineHelpText>API Name of the object whose records are to be deleted.</inlineHelpText>
        <label>Object API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <description>The order in which this Demo Cleanup Task will be executed.</description>
        <inlineHelpText>The order in which this Demo Cleanup Task will be executed.</inlineHelpText>
        <label>Order</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Permanently_Delete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if records of this object should bypass the recycle bin and be permanently deleted.</description>
        <inlineHelpText>Checked if records of this object should bypass the recycle bin and be permanently deleted.</inlineHelpText>
        <label>Permanently Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SOQL_WHERE_Clause__c</fullName>
        <description>A SOQL WHERE clause expression (without the &quot;WHERE&quot;) that evaluates to &quot;true&quot; if a record should be deleted, for example, &quot;Hand_Crafted_for_Demo_Scenario__c = false&quot;. Leave blank if all records of this object are to be deleted.</description>
        <inlineHelpText>A SOQL WHERE clause expression (without the &quot;WHERE&quot;) that evaluates to &quot;true&quot; if a record should be deleted, for example, &quot;Hand_Crafted_for_Demo_Scenario__c = false&quot;. Leave blank if all records of this object are to be deleted.</inlineHelpText>
        <label>SOQL WHERE Clause</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Demo Cleanup Task</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Active__c</columns>
        <columns>NAME</columns>
        <columns>Order__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Description__c</columns>
        <columns>Object_API_Name__c</columns>
        <columns>Apex_Class_Name__c</columns>
        <columns>Flow_API_Name__c</columns>
        <columns>Permanently_Delete__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DCT-{0000}</displayFormat>
        <label>Demo Cleanup Task ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Demo Cleanup Tasks</pluralLabel>
    <recordTypes>
        <fullName>Apex_Cleanup_Task</fullName>
        <active>true</active>
        <description>Demo cleanup task is an Apex class specification.</description>
        <label>Apex Cleanup Task</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flow_Cleanup_Task</fullName>
        <active>true</active>
        <description>Demo cleanup task is an autolaunched flow.</description>
        <label>Flow Cleanup Task</label>
    </recordTypes>
    <recordTypes>
        <fullName>SOQL_Cleanup_Task</fullName>
        <active>true</active>
        <description>Demo cleanup task is based on a SOQL query.</description>
        <label>SOQL Cleanup Task</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>For_Apex_Task_Apex_Class_Name_Required</fullName>
        <active>true</active>
        <description>For an Apex Demo Cleanup Task, the Apex class name is required.</description>
        <errorConditionFormula>RecordType.Name == &apos;Apex Cleanup Item&apos; &amp;&amp; ISBLANK(Apex_Class_Name__c)</errorConditionFormula>
        <errorDisplayField>Apex_Class_Name__c</errorDisplayField>
        <errorMessage>For an Apex cleanup task, the Apex class name must be specified.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>For_Flow_Task_Flow_Name_Is_Required</fullName>
        <active>true</active>
        <description>Each flow Demo Cleanup Task must include the flow name.</description>
        <errorConditionFormula>RecordType.Name == &quot;Flow Cleanup Item&quot; &amp;&amp; ISBLANK(Flow_API_Name__c)</errorConditionFormula>
        <errorDisplayField>Flow_API_Name__c</errorDisplayField>
        <errorMessage>For a flow cleanup task, the flow name must be specified.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>For_SOQL_Task_Object_Name_Required</fullName>
        <active>true</active>
        <description>For a SOQL cleanup task, an object API name is required</description>
        <errorConditionFormula>RecordType.Name == &apos;SOQL Cleanup Item&apos; &amp;&amp; ISBLANK(Object_API_Name__c)</errorConditionFormula>
        <errorDisplayField>Object_API_Name__c</errorDisplayField>
        <errorMessage>For a SOQL cleanup task, the object API name must be specified.</errorMessage>
    </validationRules>
</CustomObject>